cleaned up logic for bundling/archiving folders

--- a/nbs/globus_results_compile.ipynb
+++ b/nbs/globus_results_compile.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 116,
    "metadata": {
     "collapsed": false
    },
@@ -315,46 +315,41 @@
       "   - Source file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6839_C6VG0ANXX_fastqc_qc.txt not found\n",
       "   (file 2 of 2)\n",
       "   - Source file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6839_C6VG0ANXX_fastqc_qc.html not found\n",
-      "WARNING\n",
+      "   - Zipping up /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6839_C6VG0ANXX/qcR1\n",
       " > Result source: fastq\n",
       "   (file 1 of 1)\n",
       "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/ already exists\n",
-      "WARNING\n",
       " > Result source: trimmed_fastq\n",
       "   (file 1 of 1)\n",
       "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/TrimmedFastqs/lib6839_C6VG0ANXX_trimmed.fastq already exists\n",
-      "WARNING\n",
       " > Result source: picard_markdups\n",
       "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXXMarkDups\n",
       "   (file 1 of 1)\n",
       "   - Source file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_picard_markdups_metrics.html not found\n",
-      "WARNING\n",
+      "   - Zipping up /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXXMarkDups\n",
       " > Result source: picard_align\n",
       "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_qc\n",
       "   (file 1 of 1)\n",
       "   - Source file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_picard_align_metrics.html not found\n",
-      "WARNING\n",
+      "   - Zipping up /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_qc\n",
       " > Result source: htseq\n",
       "   (file 1 of 2)\n",
       "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXXmm.txt already exists\n",
       "   (file 2 of 2)\n",
       "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/counts/lib6839_C6VG0ANXX_count.txt already exists\n",
-      "WARNING\n",
       " > Result source: workflow_log\n",
       "   (file 1 of 1)\n",
       "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/logs/lib6839_C6VG0ANXX_workflow_log.txt already exists\n",
-      "WARNING\n",
       " > Result source: picard_rnaseq\n",
       "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_al\n",
       "   (file 1 of 1)\n",
       "   - Source file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_picard_rnaseq_metrics.html not found\n",
-      "WARNING\n",
+      "   - Zipping up /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXX_al\n",
       " > Result source: tophat\n",
       "   (file 1 of 2)\n",
       "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/alignments/lib6839_C6VG0ANXX.bam already exists\n",
       "   (file 2 of 2)\n",
       "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6839_C6VG0ANXXths.txt already exists\n",
-      "WARNING\n",
       ">> Compiling ouputs for lib6830_C6VG0ANXX [P43-12] (2 of 2)\n",
       "\n",
       " > Result source: fastqc\n",
@@ -364,46 +359,41 @@
       "   - Source file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6830_C6VG0ANXX_fastqc_qc.txt not found\n",
       "   (file 2 of 2)\n",
       "   - Source file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6830_C6VG0ANXX_fastqc_qc.html not found\n",
-      "WARNING\n",
+      "   - Zipping up /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/QC/lib6830_C6VG0ANXX/qcR1\n",
       " > Result source: fastq\n",
       "   (file 1 of 1)\n",
       "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/ already exists\n",
-      "WARNING\n",
       " > Result source: trimmed_fastq\n",
       "   (file 1 of 1)\n",
       "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/TrimmedFastqs/lib6830_C6VG0ANXX_trimmed.fastq already exists\n",
-      "WARNING\n",
       " > Result source: picard_markdups\n",
       "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXXMarkDups\n",
       "   (file 1 of 1)\n",
       "   - Source file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_picard_markdups_metrics.html not found\n",
-      "WARNING\n",
+      "   - Zipping up /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXXMarkDups\n",
       " > Result source: picard_align\n",
       "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_qc\n",
       "   (file 1 of 1)\n",
       "   - Source file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_picard_align_metrics.html not found\n",
-      "WARNING\n",
+      "   - Zipping up /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_qc\n",
       " > Result source: htseq\n",
       "   (file 1 of 2)\n",
       "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXXmm.txt already exists\n",
       "   (file 2 of 2)\n",
       "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/counts/lib6830_C6VG0ANXX_count.txt already exists\n",
-      "WARNING\n",
       " > Result source: workflow_log\n",
       "   (file 1 of 1)\n",
       "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/logs/lib6830_C6VG0ANXX_workflow_log.txt already exists\n",
-      "WARNING\n",
       " > Result source: picard_rnaseq\n",
       "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_al\n",
       "   (file 1 of 1)\n",
       "   - Source file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_picard_rnaseq_metrics.html not found\n",
-      "WARNING\n",
+      "   - Zipping up /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXX_al\n",
       " > Result source: tophat\n",
       "   (file 1 of 2)\n",
       "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/alignments/lib6830_C6VG0ANXX.bam already exists\n",
       "   (file 2 of 2)\n",
-      "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXXths.txt already exists\n",
-      "WARNING\n"
+      "   - Target file /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160216/metrics/lib6830_C6VG0ANXXths.txt already exists\n"
      ]
     }
    ],
