added shutil import; everything seems to be working

--- a/nbs/globus_results_compile.ipynb
+++ b/nbs/globus_results_compile.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
@@ -76,8 +76,6 @@
       ">> Compiling ouputs for lib6839_C6VG0ANXX [P43-12] (1 of 1)\n",
       "\n",
       " > Result source: fastqc\n",
-      "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/QC/lib6839_C6VG0ANXX/qcR1\n",
-      "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/QC/lib6839_C6VG0ANXX/qcR1\n",
       "   (file 1 of 2)\n",
       "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/QC/lib6839_C6VG0ANXX_fastqc_qc.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/QC/lib6839_C6VG0ANXX/qcR1/fastqc_data.txt\n",
       "   (file 2 of 2)\n",
@@ -102,7 +100,6 @@
       "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_picard_align_metrics.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXX_qc/Picard_Alignment_Summary_Metrics_html.html\n",
       "   - Zipping up /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXX_qc\n",
       " > Result source: htseq\n",
-      "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics\n",
       "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/counts\n",
       "   (file 1 of 2)\n",
       "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_htseq_metrics.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXXmm.txt\n",
@@ -119,7 +116,6 @@
       "   - Zipping up /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXX_al\n",
       " > Result source: tophat\n",
       "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/alignments\n",
-      "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics\n",
       "   (file 1 of 2)\n",
       "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/alignments/lib6839_C6VG0ANXX_tophat_alignments.bam to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/alignments/lib6839_C6VG0ANXX.bam\n",
       "   (file 2 of 2)\n",
@@ -128,7 +124,7 @@
     }
    ],
    "source": [
-    "bc.organize_files(dry_run=True)"
+    "bc.organize_files()"
    ]
   },
   {
