working on new submodule to control multiple postprocessing steps

--- a/nbs/globus_results_compile.ipynb
+++ b/nbs/globus_results_compile.ipynb
@@ -62,7 +62,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from bripipetools.globusgalaxy import postprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fc_dir = '/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/'\n",
+    "goc = postprocessing.GlobusOutputCompiler(fc_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -72,59 +95,30 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Workflow: optimized_nextera_sr_grch38_v0.1_complete\n",
-      ">> Compiling ouputs for lib6839_C6VG0ANXX [P43-12] (1 of 1)\n",
-      "\n",
-      " > Result source: fastqc\n",
-      "   (file 1 of 2)\n",
-      "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/QC/lib6839_C6VG0ANXX_fastqc_qc.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/QC/lib6839_C6VG0ANXX/qcR1/fastqc_data.txt\n",
-      "   (file 2 of 2)\n",
-      "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/QC/lib6839_C6VG0ANXX_fastqc_qc.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/QC/lib6839_C6VG0ANXX/qcR1/fastqc_report.html\n",
-      "   - Zipping up /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/QC/lib6839_C6VG0ANXX/qcR1\n",
-      " > Result source: fastq\n",
-      "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/InputFastqs\n",
-      "   (file 1 of 1)\n",
-      "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/inputFastqs/lib6839_C6VG0ANXX_R1-final.fastq.gz to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/InputFastqs/lib6839_C6VG0ANXX_R1-final.fastq.gz\n",
-      " > Result source: trimmed_fastq\n",
-      "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/TrimmedFastqs\n",
-      "   (file 1 of 1)\n",
-      "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/trimmed/lib6839_C6VG0ANXX_trimmed.fastq to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/TrimmedFastqs/lib6839_C6VG0ANXX_trimmed.fastq\n",
-      " > Result source: picard_markdups\n",
-      "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXXMarkDups\n",
-      "   (file 1 of 1)\n",
-      "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_picard_markdups_metrics.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXXMarkDups/MarkDups_Dupes_Marked_html.html\n",
-      "   - Zipping up /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXXMarkDups\n",
-      " > Result source: picard_align\n",
-      "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXX_qc\n",
-      "   (file 1 of 1)\n",
-      "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_picard_align_metrics.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXX_qc/Picard_Alignment_Summary_Metrics_html.html\n",
-      "   - Zipping up /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXX_qc\n",
-      " > Result source: htseq\n",
-      "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/counts\n",
-      "   (file 1 of 2)\n",
-      "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_htseq_metrics.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXXmm.txt\n",
-      "   (file 2 of 2)\n",
-      "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/counts/lib6839_C6VG0ANXX_htseq_counts.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/counts/lib6839_C6VG0ANXX_count.txt\n",
-      " > Result source: workflow_log\n",
-      "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/logs\n",
-      "   (file 1 of 1)\n",
-      "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/log/lib6839_C6VG0ANXX_workflow_log.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/logs/lib6839_C6VG0ANXX_workflow_log.txt\n",
-      " > Result source: picard_rnaseq\n",
-      "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXX_al\n",
-      "   (file 1 of 1)\n",
-      "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_picard_rnaseq_metrics.html to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXX_al/RNA_Seq_Metrics_html.html\n",
-      "   - Zipping up /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXX_al\n",
-      " > Result source: tophat\n",
-      "   - Creating directory /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/alignments\n",
-      "   (file 1 of 2)\n",
-      "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/alignments/lib6839_C6VG0ANXX_tophat_alignments.bam to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/alignments/lib6839_C6VG0ANXX.bam\n",
-      "   (file 2 of 2)\n",
-      "   - Moving /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_160412/metrics/lib6839_C6VG0ANXX_tophat_stats_metrics.txt to /Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/Project_P43-12Processed_globus_160412/metrics/lib6839_C6VG0ANXXths.txt\n"
+      "Found Globus Genomics Galaxy batches from the following dates:\n",
+      "  0 : 160203\n",
+      "  1 : 160216\n",
+      "  2 : 160204\n",
+      "  3 : 160209\n",
+      "  4 : 160411\n",
+      "  5 : 160412\n",
+      "  6 : 160407\n",
+      "Select the date of flowcell batches to compile: 6\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['/Volumes/genomics/Illumina/150615_D00565_0087_AC6VG0ANXX/globus_batch_submission/160407_P43-12_C6VG0ANXX_optimized_nextera_sr_grch38_v0.1_complete.txt']"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "bc.organize_files()"
+    "goc._select_date_batches()"
    ]
   },
   {
