--- a/nbs/globus_results_compile.ipynb
+++ b/nbs/globus_results_compile.ipynb
@@ -123,6 +123,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pytest"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
