added qc submodule for fc run metrics; added some more related test data

--- a/nbs/demux_barcode_qc.ipynb
+++ b/nbs/demux_barcode_qc.ipynb
@@ -51,641 +51,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 81,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "demux_stats_df = parsers.DemultiplexStatsParser(demux_stats_file).parse_to_df()"
+    "flowcell_dir = \"../tests/test-data/genomics/Illumina/160405_D00565_0109_BC8B30ANXX/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "with open(demux_summary_l1) as f:\n",
-    "    demux_summary_lines = f.readlines()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "101"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "unknown_index_line_num = [n for n, l in enumerate(demux_summary_lines) if re.search('### Most Popular', l)][0] + 2\n",
-    "unknown_index_line_num"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "unknown_index_lines = demux_summary_lines[unknown_index_line_num:len(demux_summary_lines)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "from bripipetools.qc import flowcell_run as fc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 84,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "unknown_indexes = [{'index': l.rstrip().split('\\t')[0], \n",
-    "                    'count': int(l.rstrip().split('\\t')[1])} \n",
-    "                   for l in unknown_index_lines]"
+    "fcr = fc.FlowcellRun(flowcell_dir)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "uk_index_df = pd.DataFrame(unknown_indexes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "2382223"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['../tests/test-data/genomics/Illumina/160405_D00565_0109_BC8B30ANXX/Unaligned/DemultiplexingStats.xml']\n"
+     ]
     }
    ],
    "source": [
-    "sum(uk_index_df['count'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "x = [1, 2, 3, 4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2]"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(x[1\n",
-    "   :2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>count</th>\n",
-       "      <th>index</th>\n",
-       "      <th>lane</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>27434</td>\n",
-       "      <td>CCCGTC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>22282</td>\n",
-       "      <td>CGTCCC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>21722</td>\n",
-       "      <td>GTCCCG</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>16590</td>\n",
-       "      <td>CCGATG</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>13497</td>\n",
-       "      <td>CCAGAT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>12853</td>\n",
-       "      <td>CGGCTA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>12451</td>\n",
-       "      <td>CAGTCA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>12093</td>\n",
-       "      <td>CACAGT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>11527</td>\n",
-       "      <td>CCTTGT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>11501</td>\n",
-       "      <td>CGCCAA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>11499</td>\n",
-       "      <td>TAAGTG</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>11251</td>\n",
-       "      <td>GATGTA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>10930</td>\n",
-       "      <td>TAAATG</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>10895</td>\n",
-       "      <td>CTGACC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>10776</td>\n",
-       "      <td>TTGAAT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>10303</td>\n",
-       "      <td>GTTCGG</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>10089</td>\n",
-       "      <td>AGATCA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>9983</td>\n",
-       "      <td>CAAATG</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>9689</td>\n",
-       "      <td>CACATG</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>9628</td>\n",
-       "      <td>TAGGCA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>9369</td>\n",
-       "      <td>CACTGA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>9338</td>\n",
-       "      <td>ACCAGT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>9161</td>\n",
-       "      <td>GCCCAA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>9139</td>\n",
-       "      <td>TAAAGG</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>9048</td>\n",
-       "      <td>CATGTC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>8941</td>\n",
-       "      <td>CGTTTC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>8898</td>\n",
-       "      <td>TGATAT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>8880</td>\n",
-       "      <td>GACCAA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>8856</td>\n",
-       "      <td>GTCGCA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>8787</td>\n",
-       "      <td>TAAGTA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>970</th>\n",
-       "      <td>823</td>\n",
-       "      <td>CAGCGG</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>971</th>\n",
-       "      <td>823</td>\n",
-       "      <td>CAACAC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>972</th>\n",
-       "      <td>823</td>\n",
-       "      <td>ATCCCC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>973</th>\n",
-       "      <td>821</td>\n",
-       "      <td>ACTTTC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>974</th>\n",
-       "      <td>820</td>\n",
-       "      <td>GTGGTT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>975</th>\n",
-       "      <td>820</td>\n",
-       "      <td>AGCAGT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>976</th>\n",
-       "      <td>820</td>\n",
-       "      <td>AATGAG</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>977</th>\n",
-       "      <td>817</td>\n",
-       "      <td>TCAGCT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>978</th>\n",
-       "      <td>817</td>\n",
-       "      <td>AACGGG</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>979</th>\n",
-       "      <td>816</td>\n",
-       "      <td>CCAGCT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>980</th>\n",
-       "      <td>815</td>\n",
-       "      <td>TAGGCC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>981</th>\n",
-       "      <td>815</td>\n",
-       "      <td>TACTGA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>982</th>\n",
-       "      <td>815</td>\n",
-       "      <td>TACGAT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>983</th>\n",
-       "      <td>815</td>\n",
-       "      <td>CAGCAA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>984</th>\n",
-       "      <td>814</td>\n",
-       "      <td>TGCGTG</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>985</th>\n",
-       "      <td>812</td>\n",
-       "      <td>GAGCAA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>986</th>\n",
-       "      <td>812</td>\n",
-       "      <td>GAGAAC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>987</th>\n",
-       "      <td>808</td>\n",
-       "      <td>GTGATC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>988</th>\n",
-       "      <td>808</td>\n",
-       "      <td>ACAGCA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>989</th>\n",
-       "      <td>807</td>\n",
-       "      <td>TGATTG</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>990</th>\n",
-       "      <td>807</td>\n",
-       "      <td>AGAATG</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>991</th>\n",
-       "      <td>806</td>\n",
-       "      <td>TAATGT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>992</th>\n",
-       "      <td>806</td>\n",
-       "      <td>CCATGC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>993</th>\n",
-       "      <td>804</td>\n",
-       "      <td>CCCCCA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>994</th>\n",
-       "      <td>803</td>\n",
-       "      <td>TTACTA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>995</th>\n",
-       "      <td>803</td>\n",
-       "      <td>CAGCCA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>996</th>\n",
-       "      <td>802</td>\n",
-       "      <td>TTTAAT</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>997</th>\n",
-       "      <td>802</td>\n",
-       "      <td>GCAGAA</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>998</th>\n",
-       "      <td>802</td>\n",
-       "      <td>GACCTC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>999</th>\n",
-       "      <td>802</td>\n",
-       "      <td>CTGGTC</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1000 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     count   index lane\n",
-       "0    27434  CCCGTC    1\n",
-       "1    22282  CGTCCC    1\n",
-       "2    21722  GTCCCG    1\n",
-       "3    16590  CCGATG    1\n",
-       "4    13497  CCAGAT    1\n",
-       "5    12853  CGGCTA    1\n",
-       "6    12451  CAGTCA    1\n",
-       "7    12093  CACAGT    1\n",
-       "8    11527  CCTTGT    1\n",
-       "9    11501  CGCCAA    1\n",
-       "10   11499  TAAGTG    1\n",
-       "11   11251  GATGTA    1\n",
-       "12   10930  TAAATG    1\n",
-       "13   10895  CTGACC    1\n",
-       "14   10776  TTGAAT    1\n",
-       "15   10303  GTTCGG    1\n",
-       "16   10089  AGATCA    1\n",
-       "17    9983  CAAATG    1\n",
-       "18    9689  CACATG    1\n",
-       "19    9628  TAGGCA    1\n",
-       "20    9369  CACTGA    1\n",
-       "21    9338  ACCAGT    1\n",
-       "22    9161  GCCCAA    1\n",
-       "23    9139  TAAAGG    1\n",
-       "24    9048  CATGTC    1\n",
-       "25    8941  CGTTTC    1\n",
-       "26    8898  TGATAT    1\n",
-       "27    8880  GACCAA    1\n",
-       "28    8856  GTCGCA    1\n",
-       "29    8787  TAAGTA    1\n",
-       "..     ...     ...  ...\n",
-       "970    823  CAGCGG    1\n",
-       "971    823  CAACAC    1\n",
-       "972    823  ATCCCC    1\n",
-       "973    821  ACTTTC    1\n",
-       "974    820  GTGGTT    1\n",
-       "975    820  AGCAGT    1\n",
-       "976    820  AATGAG    1\n",
-       "977    817  TCAGCT    1\n",
-       "978    817  AACGGG    1\n",
-       "979    816  CCAGCT    1\n",
-       "980    815  TAGGCC    1\n",
-       "981    815  TACTGA    1\n",
-       "982    815  TACGAT    1\n",
-       "983    815  CAGCAA    1\n",
-       "984    814  TGCGTG    1\n",
-       "985    812  GAGCAA    1\n",
-       "986    812  GAGAAC    1\n",
-       "987    808  GTGATC    1\n",
-       "988    808  ACAGCA    1\n",
-       "989    807  TGATTG    1\n",
-       "990    807  AGAATG    1\n",
-       "991    806  TAATGT    1\n",
-       "992    806  CCATGC    1\n",
-       "993    804  CCCCCA    1\n",
-       "994    803  TTACTA    1\n",
-       "995    803  CAGCCA    1\n",
-       "996    802  TTTAAT    1\n",
-       "997    802  GCAGAA    1\n",
-       "998    802  GACCTC    1\n",
-       "999    802  CTGGTC    1\n",
-       "\n",
-       "[1000 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "unknown_index_df = parsers.DemuxSummaryParser(demux_summary_l1).parse_to_df()\n",
-    "unknown_index_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1'"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "re.search('(?<=L)[1-8]', demux_summary_l1).group()"
+    "dms_file = fcr._find_demux_stats_file()\n",
+    "print(dms_file)\n",
+    "# parsers.DemultiplexStatsParser(demux_stats_file).parse_to_df()"
    ]
   },
   {
